feat(*): 优化部署脚本、服务模块名启动自动解析、服务模块目录名修改、注释完整补充、添加单体模块部署脚本
- 优化部署脚本
- 服务模块名启动自动解析
- 服务模块目录名修改
- 注释完整补充
- 添加单体模块部署脚本